// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Employer dashboard renders a 'no results' message in the table if no claims are present 1`] = `
<tr>
  <td
    colSpan={5}
  >
    No applications on file
  </td>
</tr>
`;

exports[`Employer dashboard renders a banner if there are any employers not registered in FINEOS 2`] = `
Array [
  "Your account has been verified. It may take up to 15 minutes for our systems to update so that you can log in and review applications. If anyone else on your team needs to review applications, they’ll also need to complete the ",
  <a
    href="https://www.mass.gov/how-to/creating-an-employer-account-to-review-paid-family-and-medical-leave-pfml-applications"
    key="1"
    rel="noopener"
    target="_blank"
  >
    verification process
  </a>,
  ".",
]
`;

exports[`Employer dashboard renders a table of claims with links if employer is registered in FINEOS 1`] = `
<tr
  key="NTN-111-ABS-01"
>
  <th
    data-label="Employee name"
    scope="row"
  >
    <a
      href="/employers/applications/new-application?absence_id=NTN-111-ABS-01"
    >
      Jane Doe
    </a>
  </th>
  <td
    data-label="Application ID"
    key="fineos_absence_id"
  >
    <a
      href="/employers/applications/new-application?absence_id=NTN-111-ABS-01"
    >
      NTN-111-ABS-01
    </a>
  </td>
  <td
    data-label="Organization"
    key="employer_dba"
  >
    Work Inc
  </td>
  <td
    data-label="Employer ID number"
    key="employer_fein"
  >
    12-3456789
  </td>
  <td
    data-label="Application start date"
    key="created_at"
  >
    1/15/2021
  </td>
  <td
    data-label="Status"
    key="status"
  >
    <AbsenceCaseStatusTag
      status="Approved"
    />
  </td>
</tr>
`;

exports[`Employer dashboard renders a table of claims with links if employer is registered in FINEOS 2`] = `
<thead>
  <tr>
    <th
      key="employee_name"
      scope="col"
    >
      Employee name
    </th>
    <th
      key="fineos_absence_id"
      scope="col"
    >
      Application ID
    </th>
    <th
      key="employer_dba"
      scope="col"
    >
      Organization
    </th>
    <th
      key="employer_fein"
      scope="col"
    >
      Employer ID number
    </th>
    <th
      key="created_at"
      scope="col"
    >
      Application start date
      <TooltipIcon
        position="bottom"
      >
        When an employee started a new leave application
      </TooltipIcon>
    </th>
    <th
      key="status"
      scope="col"
    >
      Status
    </th>
  </tr>
</thead>
`;

exports[`Employer dashboard renders claim rows without links if employer is not registered in FINEOS 1`] = `
<tr
  key="NTN-111-ABS-01"
>
  <th
    data-label="Employee name"
    scope="row"
  >
    Jane Doe
  </th>
  <td
    data-label="Application ID"
    key="fineos_absence_id"
  >
    NTN-111-ABS-01
  </td>
  <td
    data-label="Employer ID number"
    key="employer_fein"
  >
    **-***0002
  </td>
  <td
    data-label="Application start date"
    key="created_at"
  >
    1/15/2021
  </td>
  <td
    data-label="Status"
    key="status"
  >
    <AbsenceCaseStatusTag
      status="Approved"
    />
  </td>
</tr>
`;

exports[`Employer dashboard renders the page 1`] = `
<Title>
  Dashboard
</Title>
`;

exports[`Employer dashboard renders the page 2`] = `
<p
  className="margin-bottom-4"
>
  Applications will not have a status until the Department has made a decision. Applications that don't have a status may require action from you.
</p>
`;

exports[`Employer dashboard when employerShowVerifications flag is enabled renders instructions if there are no verified employers 1`] = `
Array [
  "You have not verified any organizations. ",
  <a
    href="/employers/organizations"
    key="1"
  >
    Complete this process
  </a>,
  " to review applications.",
]
`;
